@@ -431,6 +431,19 @@ static void process_volume(struct context_data *ctx, int chn, int act)
 
 	xc->info_finalvol = TEST_NOTE(NOTE_SAMPLE_END) ? 0 :finalvol;
 
+	/* Check Amiga split channel */
+	if (xc->split) {
+		int i;
+
+		/* Also set the volume of the paired channel */
+		for (i = 0; i < m->mod.chn; i++) {
+			if (i != chn && p->xc_data[i].split == xc->split) {
+				virt_setvol(ctx, i, finalvol);
+				break;
+			}
+		}
+	}
+
 	virt_setvol(ctx, chn, finalvol);
 }
 
